--- a/app/assets/stylesheets/parts/redaction.scss
+++ b/app/assets/stylesheets/parts/redaction.scss
@@ -269,7 +269,8 @@ body#redaction-index {
   #edition {
     padding-left: 3px;
     padding-right: 3px;
-    width: 60%;
+    flex-basis: 400px;
+    flex-grow: 1;
     p {
       margin: 0 0 5px;
       padding: 5px;
@@ -309,7 +310,17 @@ body#redaction-index {
       }
     }
   }
+  #news-actions{
+    display:-ms-flexbox;
+    display:flex;
+    flex-direction:column;
+    align-items:flex-start;
+  }
+  #redaction-aside {
+    width: 240px;
+  }
   #redaction-infos {
+    width: 280px;
     .inbox p {
       margin: 2px 0;
     }
@@ -319,7 +330,6 @@ body#redaction-index {
     padding-right: 3px;
     background: transparent;
     border: none;
-    width: 19%;
     font-size: 0.8em;
     >h1, #news_vote h1 {
       font-size:1.5em;
