--- a/app/assets/stylesheets/responsive/m.scss
+++ b/app/assets/stylesheets/responsive/m.scss
@@ -166,11 +166,11 @@
 
   #redaction {
     #redaction-aside,
-    #edition,
     #redaction-infos {
-      width: 100%;
+      flex-grow: 1;
     }
     #edition {
+      flex-basis: 100%;
       margin-top: 10px;
       order: 0;
     }
