redaction/news/boards: use the large layout

--- a/app/views/shared/_news_infos.html.haml
+++ b/app/views/shared/_news_infos.html.haml
@@ -10,7 +10,7 @@
     Aide
 %div
   #tab-board.tab-content{'data-show-content' => true}
-    = render 'boards/boards', boards: @boards, box: false
+    = render 'boards/large', boards: @boards, box: false
   #tab-infos.tab-content
     %hr
     %p
