--- a/app/views/redaction/news/_figure.html.haml
+++ b/app/views/redaction/news/_figure.html.haml
@@ -3,7 +3,7 @@
     %p %strong = error
   - if news.figure_image?
     %figure
-      %img{src: news.figure_image.url, alt: "#{news.figure_alternative}"}
+      %img{src: news.figure_image.url, alt: "#{news.figure_alternative}", srcset: news.figure_image.srcset}
       %figcaption #{news.figure_caption}
     = button_to "Effacer l'image", delete_figure_redaction_news_path(@news), class: "delete_button", data: { confirm: "Effacer cette image utilisée par erreur ?" }
     %button.edit Modifier l'image
