--- a/app/assets/stylesheets/responsive/m.scss
+++ b/app/assets/stylesheets/responsive/m.scss
@@ -125,8 +125,7 @@
     }
   }
 
-  .node footer .formats
-  {
+  .node footer .formats {
     float: none;
     margin-top: 1em;
     margin-bottom: 1em;
