--- a/app/assets/stylesheets/parts/redaction.scss
+++ b/app/assets/stylesheets/parts/redaction.scss
@@ -45,8 +45,7 @@
     border-image: inline("feather-icons/dist/icons/eye-off") 0 0 0 32;
     border-style: solid;
   }
-  #figure
-  {
+  #figure {
     text-align: center;
     background-color: $C_CLAIR;
     .add-image {
@@ -66,20 +65,21 @@
       }
     }
     figure {
-      margin:0 auto;
-      padding:0;
-      display:table;
+      margin: 0 auto;
+      padding: 0;
+      display: table;
       img {
         max-height: none;
-        &:before, &:after {
-         position: static;
-         height: auto;
-         display:block;
-         margin: auto;
-         padding: 1rem;
-         background-color: rgb(230, 230, 230);
-         border: 2px dotted rgb(200, 200, 200);
-         border-radius: 5px;
+        &:before,
+        &:after {
+          position: static;
+          height: auto;
+          display: block;
+          margin: auto;
+          padding: 1rem;
+          background-color: rgb(230, 230, 230);
+          border: 2px dotted rgb(200, 200, 200);
+          border-radius: 5px;
         }
         &:after {
           content: "Votre navigateur n'arrive pas à afficher l'image. Veuillez réessayer l'envoi.";
@@ -97,12 +97,12 @@
 
 body:not(.moderation_page) {
   #redaction {
-    #edition  {
+    #edition {
       article.news {
-        background:none;
-        border:none;
-        margin:0;
-        padding:0;
+        background: none;
+        border: none;
+        margin: 0;
+        padding: 0;
         h1 {
           font-weight: normal;
           padding: 0;
@@ -226,7 +226,7 @@ body#redaction-index {
     }
     #attendees a {
       img {
-        height:32px;
+        height: 32px;
         width: 32px;
       }
       form {
@@ -310,11 +310,11 @@ body#redaction-index {
       }
     }
   }
-  #news-actions{
-    display:-ms-flexbox;
-    display:flex;
-    flex-direction:column;
-    align-items:flex-start;
+  #news-actions {
+    display: -ms-flexbox;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
   }
   #redaction-aside {
     width: 240px;
@@ -325,15 +325,17 @@ body#redaction-index {
       margin: 2px 0;
     }
   }
-  #redaction-aside, #redaction-infos{
+  #redaction-aside,
+  #redaction-infos {
     padding-left: 3px;
     padding-right: 3px;
     background: transparent;
     border: none;
     font-size: 0.8em;
-    >h1, #news_vote h1 {
-      font-size:1.5em;
-      line-height:1.3em;
+    > h1,
+    #news_vote h1 {
+      font-size: 1.5em;
+      line-height: 1.3em;
       font-weight: normal;
       background: no-repeat 0px 1.65rem / 2rem transparent;
       background-image: url("/images/icones/underline.png");
@@ -341,10 +343,10 @@ body#redaction-index {
       padding-bottom: 5px;
     }
     #second_part_toc h2 {
-      display:none;
+      display: none;
     }
     ul {
-      padding-left:2em;
+      padding-left: 2em;
     }
     details {
       margin: 1em 0;
@@ -422,8 +424,8 @@ body#redaction-index {
   .tab {
     margin-right: 16px;
     margin-bottom: 16px;
-    font-size:1.5em;
-    line-height:1.3em;
+    font-size: 1.5em;
+    line-height: 1.3em;
     background: no-repeat 0px 1.65rem / 2rem transparent;
     background-image: url("/images/icones/underline.png");
     background-image: url("/images/icones/underline.svg"), none;
