coding style for news_helper and chat_n_edit.html.haml

--- a/app/views/layouts/chat_n_edit.html.haml
+++ b/app/views/layouts/chat_n_edit.html.haml
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 %html(lang="fr")
   = render 'layouts/head'
-  %body{body_attr, "class" => "chat_n_edit"}
+  %body.chat_n_edit{body_attr}
     #top
     = render 'layouts/site', home: true
     %section#redaction.container
