--- a/app/views/moderation/news/show.html.haml
+++ b/app/views/moderation/news/show.html.haml
@@ -24,7 +24,7 @@
       #first_part
         = render partial: 'redaction/paragraphs/paragraph', collection: @news.paragraphs.in_first_part
       #figure
-        = render partial: 'redaction/news/figure', locals: { news: @news }
+        = render partial: 'redaction/figures/figure', locals: { news: @news }
       #second_part_toc
         = @news.second_part_toc
       #second_part
