news: display main figure with right set of image according to display context
Also, remove section figure to avoid too many image on news rendering
(see new design)

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -8,7 +8,7 @@
   %h1 "Accueil"
   - if @ppp
     %section#phare
-      = render @ppp
+      = render @ppp, on_ppp: true
 
   - if @banner
     %aside.banner
