home: exclude node which is on_ppp to avoid display on top and in collection
When the node is on_ppp, we now do a really different display with the
figure linked to it.

So to ensure consistency of the nodes in collection, we exclude it from there.

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -15,7 +15,7 @@
       = @banner
   = paginated_section @nodes, link_to("Proposer une dépêche", "/news/nouveau") do
     %main#contents(role="main")
-      = render @nodes.map(&:content)
+      = render @nodes.reject{|n| n.on_ppp?}.map(&:content)
   .incitation
     %h2 Faites vivre LinuxFr.org
     %p
