--- a/app/assets/stylesheets/responsive/xs.scss
+++ b/app/assets/stylesheets/responsive/xs.scss
@@ -21,4 +21,15 @@
       border-width: 1px 0;
     }
   }
+
+  article.collection .content{
+    .news-figure figure {
+      width: 64px;
+      height: 40px;
+
+      figcaption {
+        display: none;
+      }
+    }
+  }
 }
