redaction/news: better split and design title, first part, figure and second part

--- a/app/assets/stylesheets/RonRonnement.scss
+++ b/app/assets/stylesheets/RonRonnement.scss
@@ -4,6 +4,9 @@
 
 @import "normalize.css/normalize";
 
+/* Required color constants */
+$C_SOMBRE: #747474 !default;
+
 /* Pixel size constants */
 $PX_MARGE_GAUCHE: 42px;
 $PX_MARGE_DROITE: 30px;
