--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,6 +4,7 @@
 $C_CLAIR: #e9e6e4;
 $C_BANDEAU: #4c575f !default;
 $C_FONCE: #877768;
+$C_SOMBRE: #747474 !default;
 $C_INTER: #93877b;
 $C_BAS_FOND: #e4e4e4;
 $C_FOOT: #d4d1cf;
