--- a/app/views/redaction/figures/_figure.html.haml
+++ b/app/views/redaction/figures/_figure.html.haml
@@ -9,6 +9,11 @@
     %button.edit Modifier l'image
   - else
     .add-image
-      %p Une belle illustration donnera plus envie de lire votre dépêche.
-      %p LinuxFr donne plus de visibilité aux dépêches illustrées par une image haute définition.
+      .empty-image
+      %p
+        Une belle illustration donnera plus envie de lire votre dépêche.
+        %br/
+        LinuxFr donne plus de visibilité aux dépêches illustrées
+        %br/
+        par une image haute définition.
       %button.edit{class: "add_news_figure"} Insérer une image
