--- a/app/assets/stylesheets/parts/redaction.scss
+++ b/app/assets/stylesheets/parts/redaction.scss
@@ -48,8 +48,29 @@
   #figure {
     text-align: center;
     background-color: $C_CLAIR;
+    margin: 2em auto;
     .add-image {
-      padding: 20px 0;
+      color: white;
+      font-size: 1.05em;
+      line-height: 1.8;
+      background-color: $C_SOMBRE;
+      padding: 20px;
+      .empty-image {
+        width: 64px;
+        height: 64px;
+        background: no-repeat center white;
+        background-image: url("/images/icones/image.png");
+        background-image: url("/images/icones/image.svg");
+        background-size: 75%;
+        margin: 0.5em auto;
+      }
+      .edit {
+        background-color: $C_CLAIR;
+        margin-top: 1em;
+        &:hover {
+          background-color: scale-color($C_CLAIR, $lightness: -20%);
+        }
+      }
     }
     .edit {
       border-radius: 0;
@@ -98,6 +119,23 @@
 body:not(.moderation_page) {
   #redaction {
     #edition {
+      #news_header {
+        font-size: 1.2em;
+        text-align: center;
+        margin: 0 2.5em;
+      }
+      #first_part {
+        font-size: 1.1em;
+        text-align: center;
+        color: $C_SOMBRE;
+        margin: 1em 5em;
+      }
+      #second_part {
+        padding: 0 2.5em;
+      }
+      .new_paragraph {
+        padding: 1em 2.5em;
+      }
       article.news {
         background: none;
         border: none;
@@ -242,9 +280,9 @@ body#redaction-index {
     }
   }
   .draft_creator {
-    background: #747474;
+    background: $C_SOMBRE;
     padding: 0.5rem;
-    margin: 0px 0px 20px 0px;
+    margin: 0px 0px 3em 0px;
     color: white;
     font-size: 0.8em;
     a {
