redaction/news: use new color and rearrange edition column paddings

--- a/app/assets/stylesheets/RonRonnement.scss
+++ b/app/assets/stylesheets/RonRonnement.scss
@@ -5,6 +5,7 @@
 @import "normalize.css/normalize";
 
 /* Required color constants */
+$C_CLAIR_HOVER: #ebebeb !default;
 $C_SOMBRE: #747474 !default;
 
 /* Pixel size constants */
