--- a/app/assets/stylesheets/contrib/RonRonnement-Classic.scss
+++ b/app/assets/stylesheets/contrib/RonRonnement-Classic.scss
@@ -12,6 +12,7 @@
 
 /* Color constants */
 $C_CLAIR: #e9e6e4;
+$C_CLAIR_HOVER: #ebebeb;
 $C_BANDEAU: #4c575f !default;
 $C_FONCE: #877768;
 $C_INTER: #93877b;
