--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,7 @@
 
 /* Color constants */
 $C_CLAIR: #e9e6e4;
+$C_CLAIR_HOVER: #e0e0e0 !default;
 $C_BANDEAU: #4c575f !default;
 $C_FONCE: #877768;
 $C_SOMBRE: #747474 !default;
