m.scss: remove padding and margins on mobile screen

--- a/app/assets/stylesheets/responsive/m.scss
+++ b/app/assets/stylesheets/responsive/m.scss
@@ -222,4 +222,24 @@
   .about-signup + img {
     grid-row: 9;
   }
+
+  body:not(.moderation) {
+    #redaction {
+      #edition {
+        header,
+        .draft_header,
+        #first_part,
+        #second_part,
+        .new_paragraph {
+          padding: 0;
+        }
+        .draft_creator {
+          margin: 0;
+        }
+        .draft_header #attendees {
+          right: 0;
+        }
+      }
+    }
+  }
 }
