content/news: hidde figcaption on article indexes (only shown in "show")

--- a/app/assets/stylesheets/parts/content.scss
+++ b/app/assets/stylesheets/parts/content.scss
@@ -35,11 +35,25 @@ article {
       content: " :";
     }
   }
+  &.collection.ppp {
+    .news-figure figure {
+      img {
+        width: 100%;
+        max-height: none;
+      }
+      figcaption {
+        display: none;
+      }
+    }
+  }
   &.collection .content {
     display: flex;
     justify-content: space-between;
     .news-figure figure {
       margin-left: 2em;
+      figcaption {
+        display: none;
+      }
     }
 
     figure {
