board: adapt vertical height for redaction index and tribune

--- a/app/assets/stylesheets/parts/redaction.scss
+++ b/app/assets/stylesheets/parts/redaction.scss
@@ -143,6 +143,9 @@ body.chat_n_edit {
   background: #f9f9f9;
   min-height: 100vh;
   max-width: none;
+  #tab-board .inbox-container {
+    height: 72vh;
+  }
 }
 
 body#redaction-index {
