--- a/app/assets/stylesheets/responsive/m.scss
+++ b/app/assets/stylesheets/responsive/m.scss
@@ -195,6 +195,10 @@
       display: flex;
       flex-direction: column-reverse;
     }
+    .wrapper .news-figure {
+      width: 20vw;
+      min-width: 20vw;
+    }
   }
   .markItUpEditor {
     width: 100%;
