--- a/app/assets/stylesheets/parts/redaction.scss
+++ b/app/assets/stylesheets/parts/redaction.scss
@@ -68,6 +68,7 @@
       padding: 0;
       display: table;
       img {
+        width: 100%;
         max-height: none;
         &:before,
         &:after {
@@ -244,6 +245,9 @@ body#redaction-index {
     align-self: center;
     figure {
       margin: auto;
+      img {
+        width: 100%;
+      }
     }
   }
 }
